Fix 1.4.0: GC, startscript